--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.3.0",
     "url": "^0.11.0",
     "web3": "^0.16.0",
-    "xmlhttprequest": "^1.8.0"
+    "xmlhttprequest": "^1.8.0",
+    "sendotp": "~1.2.8"
   }
 }
