--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "mongodb": "^1.4.40",
     "mongoose": "^4.11.9",
     "multer": "^1.3.0",
+    "sendotp": "^1.2.8",
     "url": "^0.11.0",
     "web3": "^0.16.0",
-    "xmlhttprequest": "^1.8.0",
-    "sendotp": "~1.2.8"
+    "xmlhttprequest": "^1.8.0"
   }
 }
